--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -7,6 +7,15 @@
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>Welcome to my Pantry!</h1>
+    <h1>Welcome to <%= user.username %>'s Pantry!</h1>
+    <ul>
+        <% foods.forEach(food => { %>
+          <li>
+            <a href="/users/<%= user._id %>/foods/<%= food._id %>">
+                <%= food.name %>
+            </a>
+          </li>  
+       <%  }) %>
+    </ul>
 </body>
 </html>
