--- a/views/foods/new.ejs
+++ b/views/foods/new.ejs
@@ -8,7 +8,7 @@
 <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1>Add a new Dish!</h1>
-    <form action="/users/:userId/foods" method="POST">
+    <form action="/users/<%= user._id %>/foods" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name">
 
