--- a/views/foods/show.ejs
+++ b/views/foods/show.ejs
@@ -27,5 +27,9 @@
     <form action="/users/<%= user._id %>/foods/<%= foods._id %>?_method=DELETE" method="POST">
         <button type="submit">Delete this Recipe</button>
     </form>
+
+    <a href="/users/<%= user._id %>/foods/<%= foods._id %>/edit">
+        <button type="submit">Edit this Recipe</button>
+    </a>
 </body>
 </html>
