--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,5 +1,6 @@
 <nav>
     <a href="/">Home</a>
+    <a href="/communityPage">Explore our Community</a>
     <% if (user) { %>
         <a href="/users/<%= user._id %>/foods">View my Pantry</a>
         <a href="/users/<%= user._id %>/foods/new">Add New Item</a>
